--- a/docs/package.json
+++ b/docs/package.json
@@ -17,6 +17,11 @@
     "vuepress": "^1.5.3"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^2.0.10",
     "vuepress-theme-reco": "^1.6.17"
   }
 }
