feat: add page settings

--- a/docs/src/.vuepress/public/manifest.json
+++ b/docs/src/.vuepress/public/manifest.json
@@ -5,7 +5,7 @@
   "background_color": "#fff",
   "start_url": "\\",
   "description": "Web of Adult Neural Plasticity and Brain Disorders in Shanghai, Sep21-23",
-  "theme_color": "#FF0000",
+  "theme_color": "#7994b4",
   "icons": [
     {
       "src": "windows11/SmallTile.scale-100.png",
