--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -11,5 +11,5 @@ jobs:
       uses: jenkey2011/vuepress-deploy@master
       env:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        BUILD_SCRIPT: cd docs && npm install && npx run build
+        BUILD_SCRIPT: cd docs && yarn install && npx run build
         BUILD_DIR: docs/src/.vuepress/dist/
